# GramPar

./: .gitignore  .gitmodules  README.md  build-docker.sh
cfg2cnf/: ANTLR4Lexer.g4  ANTLR4Parser.g4  cfg2cnf.py
cfg2cnf/driver/: ANTLR4Lexer.interp  ANTLR4Lexer.py  ANTLR4Lexer.tokens  ANTLR4Parser.interp  ANTLR4Parser.py  ANTLR4ParserListener.py  ANTLR4ParserVisitor.py
drivers/mime/: CFG_mime.txt  fuzz_cfg_mime.py  fuzz_dfa_mime.py  get_diff_groups.py  mime.l  mime_tester.py  rerun_query.py
drivers/mime/diff_queries/: 00  01  02  03  04  05  06  07  08  09  10
drivers/mime/seeds_mime-simple/: 01  02  03  04  05  06
drivers/smtp/: CFG_smtp.txt  addrspec.l  databody.l  fuzz_cfg_smtp.py  fuzz_dfa_addr-body.py  get_cfg_diff_groups.py  get_lex_diff_groups.py  run_echo_query.py
drivers/smtp/cfg_seeds/: 01.txt  02.txt
grampar/: setup.cfg
grampar/src/grampar/: cfgfuzz.py  dfafuzz.py  flex2fst.py  pythondfa.py  utils.py
grampar/src/grampar/antlr_drivers/mime/: MimeLexer.g4  MimeParser.g4
grampar/src/grampar/antlr_drivers/mime/driver/: MimeLexer.interp  MimeLexer.py  MimeLexer.tokens  MimeParser.interp  MimeParser.py  MimeParserListener.py
grampar/src/grampar/antlr_drivers/smtp/: SMTPLexer.g4  SMTPParser.g4
grampar/src/grampar/antlr_drivers/smtp/driver/: SMTPLexer.interp  SMTPLexer.py  SMTPLexer.tokens  SMTPParser.interp  SMTPParser.py  SMTPParserListener.py
testbeds/mime/: Dockerfile  docker-compose.yml
testbeds/mime/garden-io/: .gitignore
testbeds/mime/parsers/csharp/mimekit-parser/: Program.cs  mimekit-parser.csproj
(+12 files in other folders)
