[metadata]
name = grampar
version = 0.0.1
description = Fuzzing harness generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spencerwuwu/GramPar
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    networkx>=2.6.3
    loguru>=0.6.0
    antlr4-tools==0.2.2
    antlr4-python3-runtime==4.13.2
    pyformlang @ git+https://github.com/spencerwuwu/pyformlang.git@b6a61d5456e4116bc1a9df5e5c4175cb75d9cd1a#egg=pyformlang

python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src
